ghc-4335c07/testsuite/tests/deriving/should_compile/T9968.hs
{-# LANGUAGE DeriveAnyClass, MultiParamTypeClasses #-}

module T9968 where

class C a b
data X = X deriving (C Int)

