ghc-4335c07/testsuite/tests/deriving/should_fail/T7959.hs
{-# LANGUAGE MultiParamTypeClasses, StandaloneDeriving #-}
module T7959 where

class A
deriving instance A
data B deriving A
